- A lot of improvements for Linux - HexViewer bugfixes - Some libraries update